# mscript

./: .gitignore  .replit  CODE_OF_CONDUCT.md  Cargo.toml  README.md  fuzzer.ps1  out  output
.github/ISSUE_TEMPLATE/: bug.md  new-data-type.md  new-instruction-s-.md
.github/workflows/: rust.yml
bytecode/: Cargo.toml  README.md  grammar.pest
bytecode/src/: attributes_parser.rs  context.rs  file.rs  function.rs  instruction.rs  instruction_constants.rs  interpreter.rs  lib.rs  serialization.rs  stack.rs  variables.rs
bytecode/src/instruction/: arg.rs  bin_op.rs  call.rs  call_lib.rs  call_object.rs  call_self.rs  constexpr.rs  delete.rs  done.rs  equalities.rs  fast_rev2.rs  if.rs  jumps.rs  load.rs  load_callback.rs  load_fast.rs  make_function.rs  mutate.rs  neg.rs  not.rs  objects.rs  pop.rs  primitives.rs  printn.rs  ret.rs  store.rs  store_fast.rs  store_object.rs  store_skip.rs  take.rs  vec_mut.rs  vec_op.rs  vectors.rs  void.rs  while.rs
bytecode/src/variables/: object.rs  ops.rs  primitive.rs  primitive_shorthands.rs  variable.rs
bytecode/src/variables/ops/: add.rs  bitops.rs  div.rs  mul.rs  ord.rs  rem.rs  sub.rs
bytecode_dev_transpiler/: Cargo.toml  README.md
bytecode_dev_transpiler/src/: lib.rs
compiler/: Cargo.toml  README.md
compiler/src/: ast.rs  grammar.pest  lib.rs  parser.rs  scope.rs  tests.rs
compiler/src/ast/: assertion.rs  assignment.rs  assignment_no_type.rs  assignment_type.rs  assignment_unpack.rs  boolean.rs  callable.rs  class.rs  declaration.rs  dot_lookup.rs  export.rs  function.rs  function_arguments.rs  function_body.rs  function_parameters.rs  function_return_type.rs  ident.rs  ident_type.rs  if_statement.rs  import.rs  list.rs  loop_control_flow.rs  map.rs  math_expr.rs  number.rs  number_loop.rs  optionals.rs  print_statement.rs  reassignment.rs  return.rs  statement.rs  string.rs  top_level_declaration.rs  type.rs  value.rs  while_loop.rs
compiler/src/ast/assignment/: assignment_no_type.rs  assignment_type.rs  assignment_unpack.rs
compiler/src/ast/class/: class_body.rs  class_feature.rs  constructor.rs  member_function.rs  member_variable.rs
compiler/src/tests/: assertions.rs  assignments.rs  builtins.rs  class.rs  comments.rs  functions.rs  if.rs  leetcode.rs  maps.rs  math.rs  modify_edge_cases.rs  modules.rs  number_loop.rs  optionals.rs  types.rs  while.rs
examples/: bytes.mmm  ffi.mmm  t.mmm  test.mmm  test2.mmm
examples/bytecode/callbacks/: callbacks.mmm  callbacks.transpiled.mmm
examples/bytecode/fizz_buzz/: fizz_buzz.mmm  fizz_buzz.transpiled.mmm
examples/bytecode/hello_world/: hello_world.mmm  hello_world.transpiled.mmm
examples/classes/: doggy.ms  factory.ms  illegal_store.ms  imaginary_numbers.ms  int_promise.ms  main.ms  no_initialization.ms  outside_state.ms  person.ms  return_self.ms  self_type.ms
examples/closures/: closures.ms
examples/comments/: no_die.ms
examples/crashes/: #167.ms  #170.DEBUG_EMIT.mmm  #170.ms  #187.ms  #194.ms  #197.mmm  #197.ms  crash.ms  main.mmm  main.ms  minified.ms  other.mmm  other.ms  try_to_crash.DEBUG_EMIT.mmm  try_to_crash.mmm  try_to_crash.ms
examples/crud/: main.py
examples/divergent_return_types/: main.ms
examples/if/: deep.ms  if2.ms
examples/linked_list/: linked_list.DEBUG_EMIT.mmm  linked_list.mmm  linked_list.ms  main.DEBUG_EMIT.mmm  main.ms  node.DEBUG_EMIT.mmm  node.mmm  node.ms
examples/list/: indexing.ms  list_properties.ms  main.ms  react_callbacks.ms  unpacking.ms  update.ms
examples/main/: first.mmm  first.ms
examples/main/if/: if.ms  (+3 more)
examples/maps/: leetcode_3.ms  map.ms  twosum.ms  typed.ms
examples/math/: binary_math.ms  counter.ms  math.ms  op_assign.ms  primes.ms
examples/optionals/: crash.ms  get.ms  some_none.ms  unwrap.ms
examples/recursion/: main.ms
examples/stem_portfolio_demo/: fizz_buzz_bytecode.mmm  fizz_buzz_bytecode.transpiled.mmm
examples/types/: alias.mmm  alias.ms  ambiguity.ms
ffi/: Cargo.toml  README.md
ffi/src/: lib.rs
leetcode_problems/first-missing-positive/: solution.ms
leetcode_problems/letter-combinations-of-a-phone-number/: solution.mmm  solution.ms
leetcode_problems/product-of-array-except-self/: solution.ms
src/: bytecode.rs  cli.rs  main.rs
src/bytecode/: README.md  attributes_parser.rs  binary_representation.rs  context.rs  file.rs  function.rs  instruction.rs  instruction_constants.rs  interpreter.rs  mod.rs  number.rs  stack.rs  variable.rs  variables.rs
(+173 files in other folders)
