[package]
name = "mscript"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.2.4", features = ["derive"] }
bytecode = { path = "./bytecode" }

[features]
string_instructions = ["bytecode/string_instructions"]
developer = ["bytecode/developer"]

[workspace]
members = ["bytecode"]
exclude = ["ffi"]
