[package]
name = "mscript"
version = "0.0.0-alpha"
edition = "2021"
authors = ["Mateo Rodriguez"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.2.4", features = ["derive"] }
bytecode = { path = "./bytecode" }
bytecode_dev_transpiler = { path = "./bytecode_dev_transpiler" }
compiler = { path = "./compiler" }

[features]
developer = ["bytecode/developer"]

[workspace]
members = ["bytecode", "bytecode_dev_transpiler", "compiler"]
exclude = ["ffi"]
