[package]
name = "mscript"
version = "0.0.0-alpha"
edition = "2021"
authors = ["Mateo Rodriguez"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.2.4", features = ["derive"] }
bytecode = { path = "./bytecode" }
bytecode_dev_transpiler = { path = "./bytecode_dev_transpiler" }
compiler = { path = "./compiler" }
log = "0.4.19"
colored = "2.0.4"
memory-stats = { version = "1.1.0", features = ["always_use_statm"]}

[features]
default = ["skip_breakpoint"]
debug_runtime = ["bytecode/debug"]
debug_compiler = ["compiler/debug"]
debug = ["bytecode/debug", "compiler/debug"]
skip_breakpoint = ["bytecode/skip_breakpoint"]

[workspace]
members = ["bytecode", "bytecode_dev_transpiler", "compiler"]
exclude = ["ffi"]
