[package]
name = "bytecode"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
bincode = "1.3.3"
bumpalo = "3.13.0"
lazy_static = "1.4.0"
libloading = "0.8.0"
log = "0.4.19"
once_cell = "1.17.1"
serde_derive = "1.0"
serde = "1.0"
erased-serde = "0.3"


[features]
debug = []
