[package]
name = "bytecode"
version = "1.0.0-rc.2"
edition = "2021"

[lib]
crate-type = ["lib"]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
lazy_static = "1.4.0"
libloading = "0.8.0"
log = "0.4.19"
once_cell = "1.17.1"

[features]
debug = []
skip_breakpoint = []