[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bytecode = { path = "../bytecode" }
indicatif = "0.17.3"
once_cell = "1.17.1"
pest = "2.6.0"
pest_consume = "1.1.3"
pest_consume_macros = { version = "1.1.0" }
pest_derive = "2.6.0"